Placed in the info templates for species, ability, sex, gender, preferred pronouns, sexuality, birthday, age, and family

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -503,6 +503,10 @@
               代名詞：彼女／奴（she/they）<br>
               雌雄性：性行為を虫唾が走ったアセクシャル
             </p>
+            <p>
+              誕生日：<br>
+              年齢：
+            </p>
             <p>感情の神である。感情を感じる場合による、耳の髪と翼の色は変わる。通常の色は<span style="color: #FBD569;">金色</span>である。</p>
             <br>
             <a href="./gallery/nizi/HapPEmoShun.html" target="topframe">美術館へ行きますか？</a>
@@ -532,11 +536,21 @@
               製品の名前：IDOLA-0C1D（イドラ－ゼロシーいちディー）<br>
               人間のような名前：イドラ　Idola
             </p>
-            <p>種族：アンドロイド・戦争モデル</p>
             <p>
-              性自認：<br>
-              代名詞：
+              種族：アンドロイド・戦争モデル<br>
+              能力：
             </p>
+            <p>
+              性別：<br>
+              性自認：<br>
+              代名詞：<br>
+              雌雄性：
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
+            </p>
+            <p>家族：</p>
             <br>
             <a href="./gallery/nizi/Idola.html" target="topframe">美術館へ行きますか？</a>
             <br>
@@ -575,11 +589,19 @@
               エリサベト・ヒディルベギシュヴィリ＝ガルセヴァニシュヴィリ＝ピルツハライシュヴィリ<br>
               Elisabed Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili
             </p>
-            <p>種族：化け狸</p>
             <p>
+              種族：化け狸<br>
+              能力：
+            </p>
+            <p>
+              性別：<br>
               性自認：デミ女<br>
               代名詞：she/they/hu<br>
               雌雄性：アブロセクシャル
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
             </p>
             <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
             <p>※グルジア文字に「<span lang="ka" class="font-georgian">ელისაბედ ხიდირბეგიშვილი-გარსევანიშვილი-ფირცხალაიშვილი</span>」で書く。</p>
@@ -613,8 +635,18 @@
               Olha Yukhymivna Lytvyna-Kostyuchenko
             </p>
             <p>
+              種族：<br>
+              能力：
+            </p>
+            <p>
+              性別：<br>
               性自認：<br>
-              代名詞：
+              代名詞：<br>
+              雌雄性：
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
             </p>
             <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
             <p>※キリル文字に「<span lang="uk" class="font-cyrillic">Олга Юхимівна Литвина-Костюченко</span>」で書く。</p>
@@ -648,8 +680,18 @@
               Maeng Song-Hee
             </p>
             <p>
+              種族：<br>
+              能力：
+            </p>
+            <p>
+              性別：<br>
               性自認：<br>
-              代名詞：
+              代名詞：<br>
+              雌雄性：
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
             </p>
             <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
             <p>※ハングルに「<span lang="ko" class="font-hangul">맹성희</span>」と<ruby>漢字<rt>ハンジャ</rt></ruby>に「<span lang="ko-Hani" class="font-hanja">孟聖姬</span>」で書く。</p>
@@ -682,10 +724,19 @@
               ぬゑさか　岸姫（ぬゑさか　きしひめ）<br>
               Nuwesaka Kishihime
             </p>
-            <p>種族：鵺</p>
             <p>
+              種族：鵺<br>
+              能力：
+            </p>
+            <p>
+              性別：<br>
               性自認：バイジェンダー<br>
-              代名詞：彼女／彼（she/he）
+              代名詞：彼女／彼（she/he）<br>
+              雌雄性：
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
             </p>
             <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
             <br>
@@ -717,8 +768,18 @@
               Ilyinishna Makarovna Obraztsova-Sluchevskaya
             </p>
             <p>
+              種族：<br>
+              能力：
+            </p>
+            <p>
+              性別：<br>
               性自認：<br>
-              代名詞：
+              代名詞：<br>
+              雌雄性：
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
             </p>
             <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
             <p>※キリル文字に「<span lang="ru" class="font-cyrillic">Ильинишна Макаровна Образцова-Случевская</span>」で書く。</p>
@@ -751,8 +812,18 @@
               Sanda Khaing Theingi Htet
             </p>
             <p>
+              種族：<br>
+              能力：
+            </p>
+            <p>
+              性別：<br>
               性自認：<br>
-              代名詞：
+              代名詞：<br>
+              雌雄性：
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
             </p>
             <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
             <p>※ビルマ文字に「<span lang="my" class="font-myanmar">စန္ဒာခိုင်သိင်္ဂီထက်</span>」で書く。MLCTS式に「<span lang="my-Latn" class="font-latin">Canda Hkuing Singgi Htak</span>」で書く。</p>
@@ -784,10 +855,19 @@
               スカーレット・ウィリアムズ<br>
               Scarlett Williams
             </p>
-            <p>種族：吸血鬼</p>
             <p>
+              種族：吸血鬼<br>
+              能力：
+            </p>
+            <p>
+              性別：<br>
               性自認：<br>
-              代名詞：
+              代名詞：<br>
+              雌雄性：
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
             </p>
             <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
             <br>
