--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -54,6 +54,17 @@
                 種族：魔法使い<br>
                 能力：宇宙操作の能力
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　ウインドスイーパー王国の若い少女である。禁じられた魔法も使う。</p>
               <p>　ハイディ・ブラザーウィックの娘である。０３４５年アシュで６歳、ライラックは彼女ついていくつかの個性がある。一つには、ライラックは重度のてんかんを患っており、軽度の発作と生命を脅かす発作の両方をしばしば引き起こす。彼女の母親と同じように喘息であり、しばしば吸入器を携帯する。また、他の多くの問題につながる弱い心臓を持っている。ライラックの魔法を使う事は、彼女の体に非常に費用がかかる事が多く、あらゆる種類のお仕事の後、しばしば病室に彼女を置く。</p>
               <p>　ライラックの魔法は時空のまさに布を引き裂く可能性がある為禁じられている。星をライフサイクルの後期に加速し、環境を光の速度で動いているように見せ、星をブラックホールに崩壊させる事さえできる。ガンマ線バースト（ＧＲＢ）を武器化して敵を素早く殺す事さえできる。ガンマ線の一部が彼女に戻ってくる為、ライラックはＧＲＢをほとんど使わない。また、ワームホール（アインシュタイン－ローゼン橋と呼ばれる）を開いて移動する事もできる。</p>
@@ -85,7 +96,21 @@
                 ハービー・チャッドボーン<br>
                 Harvey Chadbourne
               </p>
-              <p>種族：魔法使い</p>
+              <p>
+                種族：魔法使い<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　宇志江に向かって禁じられた魔法と憎しみを持つ若い男である。かつてのウインドスイーパー王国の王であった。</p>
               <p>スピリットアタック全２種</p>
               <p>
@@ -114,6 +139,17 @@
                 能力：地獄の軍団を指揮する程度の能力<br>
                 武器：ツヴァイヘンダー”ケニグトゥムシュヴェルト”
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　キャブロイシュタインの元王さまである。かつて強権で支配し、王国を地獄の独裁政権に変えた。黒曜石評議会の指導者である。</p>
               <p>※代名詞は「<ruby>私<rt>わたし</rt></ruby>」である。</p>
             </div>
@@ -135,6 +171,17 @@
                 種族：天狗<br>
                 能力：剣術を使う程度の能力
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　ライラックの若い天狗の友達である。</p>
             </div>
             <br>
@@ -151,7 +198,21 @@
                 岸本　龍志（きしもと　たっし）<br>
                 Kishimoto Tasshi
               </p>
-              <p>種族：コマ犬</p>
+              <p>
+                種族：コマ犬<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　楓を殺害しようとした為に騎士が追放された。すでに楓の両親を殺した。剣には犠牲者の血を流す魔法が埋め込まれている。宇志江衛兵の元メンバーであった。</p>
             </div>
             <br>
@@ -172,6 +233,17 @@
                 種族：犬の妖怪（使い魔）<br>
                 能力：盾を創造する程度の能力
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　ラインハルト・シッケンダンツの使い魔である。</p>
             </div>
             <br>
@@ -193,6 +265,17 @@
                 能力：若い女性の性交を促進する程度の能力<br>
                 武器：刀”女郎桜剣”
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　沖美の元魔法教師である。</p>
               <p>　朝次郎の性的犯罪と関連していると判決を受けて追放された。魔法は他の女性の乱交を引き起こす事がある。由佳理の教師でもあった。</p>
               <p>　朝次郎が沖美を強姦した時、伊紀は同僚の行動に疑問を呈し、傷ついた姫さまを慰めた最初の人であった。沖美は、『敵』としてブランド化されているにもかかわらず、まだ伊紀を尊敬している。</p>
@@ -213,7 +296,21 @@
                 崎本　朝次郎（さきもと　ちょうじろう）<br>
                 Sakimoto Choujirou
               </p>
-              <p>種族：人間</p>
+              <p>
+                種族：人間<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　沖美と由佳理を性的に暴行させたは、宇志江から追放された。他人の魔法を否定する魔法を持っている（それが彼の嫌な（そして違法な）進歩に対する沖美と由佳理の脆弱性の原因だった）。</p>
               <p>　朝次郎には３人の既知の犠牲者がいた。</p>
               <p>　――アシュ０３３９年４月１日では、朝次郎は寝屋で笹川沖美（当時６歳）に近づいた。</p>
@@ -254,7 +351,21 @@
                 ラインハルト・シッケンダンツ<br>
                 <span lang="de">Reinhard Schickendantz</span>
               </p>
-              <p>種族：魔人</p>
+              <p>
+                種族：魔人<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　反逆の為にキャブロイシュタインから追放された騎士である。現在、ヴィルヘルミナに奉仕し、強力な黒魔術を使用している。リビェナの主である。</p>
             </div>
             <br>
@@ -274,6 +385,17 @@
                 種族：縞スカンクの妖怪（使い魔）<br>
                 能力：お尻から汚れた液体が繁吹く程度の能力
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　ライラックの一匹使い魔である。臭鼬悟貍が生まれた。</p>
               <p>※代名詞は「？」である。ピンインに「<span lang="zh-Latn" class="font-latin">Chòuyòu Wùlí</span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Chowyow Wuhli</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Chʻou<sup>4</sup>-yu<sup>4</sup> Wu<sup>4</sup>-li<sup>2</sup></span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">臭鼬悟貍</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">臭鼬悟狸</span>」で書く。</p>
             </div>
@@ -290,6 +412,21 @@
                 橘　純夫（たちばな　すみお）<br>
                 Tachibana Sumio
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
             </div>
             <br>
             <br>
@@ -304,7 +441,21 @@
                 竹乃家　締丸（たけのや　しめまる）<br>
                 Takenoya Shimemaru
               </p>
-              <p>種族：トラの妖怪</p>
+              <p>
+                種族：トラの妖怪<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
             </div>
             <br>
             <br>
