--- a/html/qarya_al-arnabu.html
+++ b/html/qarya_al-arnabu.html
@@ -50,7 +50,21 @@
                 アラ<br>
                 Ala
               </p>
-              <p>種族：女神</p>
+              <p>
+                種族：女神<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>ウサギの里に住む女神である。</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">عَلْآع</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʿAlʾāʿ</span>」を書く。</p>
             </div>
@@ -69,7 +83,21 @@
                 Ghaaliba bint Jafar ibn Amaanullah ibn Farajallah ibn Afeef ibn Musaddiq ibn Izzaddeen ibn Mutammam el-Abdelrahman<br>
                 通称：ガーリバ・アルクアドリー　Ghaalibah al-Quadri
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　ウサギの里の村長である。</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">غَالِبَة اِبْنَت جَفَر اِبْن أَمَانُ ٱللّٰه اِبْن فَرَجَلَّة اِبْن عَفِيف اِبْن مُسَدِّيق اِبْن إِزَّدِّين اِبْن مُتَمَّم اِلْأَبْدِلْرَحْمَن</span>」と「<span lang="ar" dir="rtl" class="font-naskh">غَالِبَة اَلْقُوَدْرِيَّة</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Ġālibah ibnat Jafar ibn ʾAmānu llāh ibn Farajallah ibn ʿAfīf ibn Musaddīq ibn ʾIzzaddīn ibn Mutammam il-ʾAbdilraḥman</span>」と「<span lang="ar-Latn" class="font-latin">Ġālibah al-Quwadrīyyah</span>」を書く。</p>
             </div>
@@ -86,7 +114,21 @@
                 ザーフィル・イブンムタスィル・アルアビード<br>
                 Dhaafir ibn Mutasir al-'Abeed
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">ذَافِر اِبْن مُطَصِير اَلْعَبِيد</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Ḏāfir ibn Muṭaṣīr al-ʿAbīd</span>」を書く。</p>
             </div>
             <br>
@@ -102,7 +144,21 @@
                 ヒクマ・イブナトジハード・アルアルシャド<br>
                 Hikma bint Jihaad al-Arshad
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">هِكْمَة اِبْنَت جِحَاد اَلْعَرْشَد</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Hikmah ibnat Jiḥād al-ʿAršad</span>」を書く。</p>
             </div>
             <br>
@@ -118,7 +174,21 @@
                 シャフィーカ・アルバルチ<br>
                 Shafeeqa al-Baluch
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">شَفِيقَة اَلْبَلُتْش</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Šafīqah al-Balutš</span>」を書く。</p>
             </div>
             <br>
@@ -134,7 +204,21 @@
                 マスウーダ・イブナトジュマイル・イドダルウィシュ<br>
                 Mas'ooda bint Jumail ed-Darwish
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">مَسْعُودَة اِبْنَت جُمَيْل اِلدَّرْوِش</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Masʿūdah ibnat Jumayl id-Darwiš</span>」を書く。</p>
             </div>
             <br>
@@ -150,7 +234,21 @@
                 タマンナ・イルガッファリ<br>
                 Tamanna il-Ghaffari
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">تَمَنَّة اِلْغَفَّرِه</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Tamannah il-Ġaffarih</span>」を書く。</p>
             </div>
             <br>
@@ -166,7 +264,21 @@
                 ムアーイド・イブンナーシルッディーン・イルハニフ<br>
                 Muaaid ibn Naasiruddeen el-Hanif
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">مْوَايْد اِبْن نَاسِرُضِّين اِلْخَنِف</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Muwāyd ibn Nāsiruḍḍīn il-Ḫanif</span>」を書く。</p>
             </div>
             <br>
@@ -182,7 +294,21 @@
                 サービカ・アルフッサイン<br>
                 Saabiqa al-Hussain
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">سَابِقَة اَلْهُسَّيْن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Sābiqah al-Hussayn</span>」を書く。</p>
             </div>
             <br>
@@ -198,7 +324,21 @@
                 シャファーア・イブナトハリーファハ・イルイスラーム<br>
                 Shafaa'a bint Khaleefah el-Islam
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">شَفَاعَة اِبْنَت خَلِيفَة اِلْإِسْلَام‎</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Śafāʿah ibnat Ḫalīfah il-ʾIslām</span>」を書く。</p>
             </div>
             <br>
@@ -214,7 +354,21 @@
                 イッファト＝ジュハイナ・イルイスマイル<br>
                 Iffat-Juhaina il-Ismail
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">إِفَّت-جُهَيْنَة اِلإِسْمَيْل</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʾIffat-Juhaynah il-ʾIsmayl</span>」を書く。</p>
             </div>
             <br>
@@ -235,6 +389,17 @@
                 種族：芝兎<br>
                 能力：武器と使う物を鍛える程度の能力
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　旅の鍛冶屋である。美里子の内弟子である。</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">عِلْحَم اِبْنَة مُسْعَب اِبْن وَجِيخ اِبْن هِلْمِي اِبْن قَيُّون اِبْن مُحَمَّد اِبْن مُتَمَّم اَلْجَبَّر</span>」と「<span lang="ar" dir="rtl" class="font-naskh">عِلْحَم جَبَّرَة</span>」で書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʿIlḥam ibnat Musʿab ibn Wajīḫ ibn Hilmīyy ibn Qayyūn ibn Muḥammad ibn Mutammam al-Jabbar</span>」と「<span lang="ar-Latn" class="font-latin">ʿIlḥam Jabbarah</span>」を書く。</p>
             </div>
@@ -251,7 +416,21 @@
                 リフア・アルジャマイル<br>
                 Rif'a al-Jamail
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">رِفْعَة اَلْجَمَيْل</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Rifaʿah al-Jamayl</span>」を書く。</p>
             </div>
             <br>
@@ -267,7 +446,21 @@
                 カムラ・アルハラフ<br>
                 Qamra al-Khalaf
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">قَمْرَة اَلْخَلَف</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Qamrah al-Ḫalaf</span>」を書く。</p>
             </div>
             <br>
@@ -283,7 +476,21 @@
                 アブドゥス・サラム・イブンイハーブ・アルモガッダム<br>
                 Abdus Salam ibn Ihaab al-Moghaddam
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">أَبْدُس سَلَم اِبْن عِهَاب اَلْمُغَدَّم</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʾAbnus Salam ibn ʿIhāb al-Muġaddam</span>」を書く。</p>
             </div>
             <br>
@@ -299,7 +506,21 @@
                 アブドゥル・イブラヒム・イルラスル<br>
                 Abdur Ibrahim ir-Rasul
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">أَبْدُر إِبْرَاهِيم اِلْرَسُل</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʾAbdur ʾIbrāhīm ir-Rasul</span>」を書く。</p>
             </div>
             <br>
@@ -315,7 +536,21 @@
                 イシャーク・アスサード<br>
                 Ishaaq as-Saad
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">إِشَاق اَلْصَاد</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʾIšāq aṣ-Ṣād</span>」を書く。</p>
             </div>
             <br>
@@ -331,7 +566,21 @@
                 ファトヒヤー・イブナトアッバード・イスサラフッディン<br>
                 Fat'hiyaa bint Abbaad es-Salahuddin
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">فَتْعْهِيَاة اِبْنَت أَبَّاد اِلسَّلَهُدِّن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Fatʿhiyāh ibnat ʾAbbād is-Salahuddin</span>」を書く。</p>
             </div>
             <br>
@@ -347,7 +596,21 @@
                 タージュッディーン・イブンヒラール・アスサラハ<br>
                 Taajuddeen ibn Hilaal as-Sarah
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">طَاجُدِّين اِبْن هِلَال اَلسَّرَه</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Ṭājuddīn ibn Hilāl as-Sarah</span>」を書く。</p>
             </div>
             <br>
@@ -363,7 +626,21 @@
                 ヤクーブ・イブンラビーブ・アススルタニー<br>
                 Ya'qoob ibn Labeeb as-Soltani
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">يَعْقُوب اِبْن لَبِيب اَلسُّلْتَنِي</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Yaʿqūb ibn Labīb as-Sultaniyy</span>」を書く。</p>
             </div>
             <br>
@@ -379,7 +656,21 @@
                 ワディーアーラ・イブナトハーシム・アトタバタバイ<br>
                 Wadee'ala bint Haashim at-Tabatabai
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">وَدِيآلَة اِبْنَت حَاشِم اَلتَّبَطَبَيّ</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Wadīʾālah ibnat Ḥāšim at-Tanaṭanayy</span>」を書く。</p>
             </div>
             <br>
@@ -395,7 +686,21 @@
                 シュクリヤ・イルウトマン<br>
                 Shukriyya il-Uthman
               </p>
-              <p>種族：芝兎</p>
+              <p>
+                種族：芝兎<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">شُكْرِيَّة اِلأُثْمَن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Šukriyyah il-ʾUṯman</span>」を書く。</p>
             </div>
             <br>
