Changed "と" to "・" on line 247

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -244,7 +244,7 @@
             </p>
             <p>
               性別：<br>
-              性自認：ノンバイナリーとトランスフェミニン<br>
+              性自認：ノンバイナリー・トランスフェミニン<br>
               代名詞：彼女／奴（she/they）<br>
               雌雄性：アセクシャル
             </p>
