Added missing </p> tags

--- a/html/ibarasaki.html
+++ b/html/ibarasaki.html
@@ -5117,7 +5117,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Юмжаагын Эрдэнэчимэг</span>」を書く。モンゴル文字に「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠶᠤᠮᠵᠠᠭᠢᠨ<br>ᠡᠷᠳᠡᠨᠡᠴᠢᠮᠡᠭ</span>」を書く。
+              <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Юмжаагын Эрдэнэчимэг</span>」を書く。モンゴル文字に「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠶᠤᠮᠵᠠᠭᠢᠨ<br>ᠡᠷᠳᠡᠨᠡᠴᠢᠮᠡᠭ</span>」を書く。</p>
             </div>
           </div>
           <!-- ユムチャーギン・メンヒツェツェグ（Yumjaagyn Mönkhtsetseg） -->
@@ -5145,7 +5145,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Юмжаагын Мөнхцэцэг</span>」を書く。モンゴル文字に「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠶᠤᠮᠵᠠᠭᠢᠨ<br>ᠮᠥᠩᠬᠡᠴᠡᠴᠡᠭ</span>」を書く。
+              <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Юмжаагын Мөнхцэцэг</span>」を書く。モンゴル文字に「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠶᠤᠮᠵᠠᠭᠢᠨ<br>ᠮᠥᠩᠬᠡᠴᠡᠴᠡᠭ</span>」を書く。</p>
             </div>
           </div>
           <!-- アラ・ヘナディイヴナ・ザイカ（Alla Henadiyivna Zayika） -->
