Added and applied class "old-text"

--- a/html/ibarasaki.html
+++ b/html/ibarasaki.html
@@ -64,7 +64,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="az-Arab" dir="rtl" class="font-nastaliq">ایرادأ آبباسقۇلۇگیل</span>」を書く。<span style="color:red">キリル文字に「<span lang="az-Cyrl" class="font-cyrillic">Ирадә Аббасгулуҝил</span>」を書く。</span></p>
+              <p>※アラビア文字に「<span lang="az-Arab" dir="rtl" class="font-nastaliq">ایرادأ آبباسقۇلۇگیل</span>」を書く。<span class="old-text">キリル文字に「<span lang="az-Cyrl" class="font-cyrillic">Ирадә Аббасгулуҝил</span>」を書く。</span></p>
             </div>
           </div>
           <!-- タウヒーダ・アルアブード（Tawheeda al-Abood） -->
@@ -202,7 +202,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="az-Arab" dir="rtl" class="font-nastaliq">اجمت آللاهوئردیلؽ</span>」を書く。<span style="color:red">キリル文字に「<span lang="az-Cyrl" class="font-cyrillic">Әҹмәт Аллаһвердилы</span>」を書く。</span></p>
+              <p>※アラビア文字に「<span lang="az-Arab" dir="rtl" class="font-nastaliq">اجمت آللاهوئردیلؽ</span>」を書く。<span class="old-text">キリル文字に「<span lang="az-Cyrl" class="font-cyrillic">Әҹмәт Аллаһвердилы</span>」を書く。</span></p>
             </div>
           </div>
           <!-- シャミーマ・アルアミル（Shameema al-Amir） -->
@@ -450,7 +450,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="az-Arab" dir="rtl" class="font-nastaliq">ایلنارأ بیهبۇدزادأ</span>」を書く。<span style="color:red">キリル文字に「<span lang="az-Cyrl" class="font-cyrillic">Илнарә Бәһбудзадә</span>」を書く。</span></p>
+              <p>※アラビア文字に「<span lang="az-Arab" dir="rtl" class="font-nastaliq">ایلنارأ بیهبۇدزادأ</span>」を書く。<span class="old-text">キリル文字に「<span lang="az-Cyrl" class="font-cyrillic">Илнарә Бәһбудзадә</span>」を書く。</span></p>
             </div>
           </div>
           <!-- ワレリー・「ワレラ」・ワディモヴィチ・ベログラゾフ（Valeriy “Valera” Vadimovich Beloglazov） -->
@@ -781,7 +781,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="az-Arab" dir="rtl" class="font-nastaliq">خدیجأ جاهانگیرقؽزؽ</span>」を書く。<span style="color:red">キリル文字に「<span lang="az-Cyrl" class="font-cyrillic">Хәдиҹә Ҹаһанҝиргызы</span>」を書く。</span></p>
+              <p>※アラビア文字に「<span lang="az-Arab" dir="rtl" class="font-nastaliq">خدیجأ جاهانگیرقؽزؽ</span>」を書く。<span class="old-text">キリル文字に「<span lang="az-Cyrl" class="font-cyrillic">Хәдиҹә Ҹаһанҝиргызы</span>」を書く。</span></p>
             </div>
           </div>
           <!-- モーラク・カリャナッハ（Mòrag Caileanach） -->
@@ -1357,7 +1357,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="az-Arab" dir="rtl" class="font-nastaliq">اینتیقام ارتوْغرۇلگیل</span>」を書く。<span style="color:red">キリル文字に「<span lang="az-Cyrl" class="font-cyrillic">Интигам Әртоғрулҝил</span>」を書く。</span></p>
+              <p>※アラビア文字に「<span lang="az-Arab" dir="rtl" class="font-nastaliq">اینتیقام ارتوْغرۇلگیل</span>」を書く。<span class="old-text">キリル文字に「<span lang="az-Cyrl" class="font-cyrillic">Интигам Әртоғрулҝил</span>」を書く。</span></p>
             </div>
           </div>
           <!-- ムヒーッディーン・イルファラン（Muhyddeen el-Farran） -->
