Applied class "pride-flag"

--- a/html/ibarasaki.html
+++ b/html/ibarasaki.html
@@ -2085,9 +2085,9 @@
             <div class="pride">
               <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="caption">代名詞：he/she/they</p>
-              <img class="border" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）">
               <br>
-              <img class="border" src="../img/pride/Agender.png" alt="アジェンダー（Agender）" title="アジェンダー（Agender）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Agender.png" alt="アジェンダー（Agender）" title="アジェンダー（Agender）">
               <br>
             </div>
             <div class="body">
