Added art gallery for Marcus Sjöholm

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -876,6 +876,9 @@
                   年齢：
                 </p>
                 <p>家族：</p>
+                <br>
+                <a href="./gallery/spalmea/MarcusSjoholm.html" target="topframe">美術館へ行きますか？</a>
+                <br>
               </div>
             </div>
             <!-- インゲゲルド・スカースゴールド（Ingegärd Skarsgård） -->
