Changed the art gallery header to be more sensible

--- a/html/gallery/spalmea/AimeeLiljestrom.html
+++ b/html/gallery/spalmea/AimeeLiljestrom.html
@@ -21,7 +21,7 @@
     -->
     <meta charset="UTF-8">
     <!-- The title of the page shown in the browser tab. -->
-    <title>造化神録　美術館　アイメェ・リリェストロム</title>
+    <title>美術館　アイメェ・リリェストロム</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../../../css/default.css">
   </head>
@@ -29,7 +29,8 @@
     <header>
       <div class="heading">
         <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 class="header-text">造化神録</h2>
+        <h2 class="header-text">美術館</h2>
+        <h3 class="header-text">アイメェ・リリェストロム</h3>
       </div>
     </header>
     <article>
