--- a/html/gallery/spalmea/MarcusSjoholm.html
+++ b/html/gallery/spalmea/MarcusSjoholm.html
@@ -21,7 +21,7 @@
     -->
     <meta charset="UTF-8">
     <!-- The title of the page shown in the browser tab. -->
-    <title>造化神録　美術館　マークス・スィオホルム</title>
+    <title>美術館　マークス・スィオホルム</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../../../css/default.css">
   </head>
