Updated id for headings

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -45,7 +45,7 @@
         <!-- 虹川郷鬼（Satoki Nijikawa） -->
         <section class="section">
           <div class="heading">
-            <h4 id="SatokiNijikawa">虹川郷鬼</h4>
+            <h4 id="Satoki_Nijikawa">虹川郷鬼</h4>
           </div>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
@@ -309,7 +309,7 @@
         <!-- アイン（'Ayn） -->
         <div class="section">
           <div class="heading">
-            <h4 id="Ayn">アイン</h4>
+            <h4 id="ʿAyn">アイン</h4>
           </div>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
@@ -386,7 +386,7 @@
         <!-- 錯誤（Cuòwù） -->
         <div class="section">
           <div class="heading">
-            <h4 id="Cuowu">錯誤</h4>
+            <h4 id="Cuòwù">錯誤</h4>
           </div>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
@@ -463,7 +463,7 @@
         <!-- ハップ・P・エモ＝ション（Hap P. Emo-shun） -->
         <div class="section">
           <div class="heading">
-            <h4 id="HapPEmoShun">ハップ・P・エモ＝ション</h4>
+            <h4 id="Hap_P._Emo-shun">ハップ・P・エモ＝ション</h4>
           </div>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
@@ -558,7 +558,7 @@
         <!-- エリサベト・ヒディルベギシュヴィリ＝ガルセヴァニシュヴィリ＝ピルツハライシュヴィリ（Elisabed Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili） -->
         <div class="section">
           <div class="heading">
-            <h4 id="ElisabedPirtskhalaishvili">エリサベト・ピルツハライシュヴィリ</h4>
+            <h4 id="Elisabed_Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili">エリサベト・ピルツハライシュヴィリ</h4>
           </div>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
@@ -605,7 +605,7 @@
         <!-- オルハ・ユヒミウナ・リトウィナ＝コスチュチェンコ（Olha Yukhymivna Lytvyna-Kostyuchenko） -->
         <div class="section">
           <div class="heading">
-            <h4 id="OlhaYukhymivnaLytvyna">オルハ・ユヒミウナ・リトウィナ</h4>
+            <h4 id="Olha_Yukhymivna_Lytvyna-Kostyuchenko">オルハ・ユヒミウナ・リトウィナ</h4>
           </div>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
@@ -649,7 +649,7 @@
         <!-- 孟聖姫（Maeng Song-Hee） -->
         <div class="section">
           <div class="heading">
-            <h4 id="MaengSongHee">孟聖姫</h4>
+            <h4 id="Maeng_Song-Hee">孟聖姫</h4>
           </div>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
@@ -693,7 +693,7 @@
         <!-- ぬゑさか岸姫（Kishihime Nuwesaka） -->
         <div class="section">
           <div class="heading">
-            <h4 id="KishihimeNuwesaka">ぬゑさか岸姫</h4>
+            <h4 id="Kishihime_Nuwesaka">ぬゑさか岸姫</h4>
           </div>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
@@ -736,7 +736,7 @@
         <!-- イリニシュナ・マカロフナ・オブラズツォファ＝スルチェフスカヤ（Ilyinishna Makarovna Obraztsova-Sluchevskaya） -->
         <div class="section">
           <div class="heading">
-            <h4 id="IlyinishnaMakarovnaObraztsova">イリニシュナ・マカロフナ・オブラズツォファ</h4>
+            <h4 id="Ilyinishna_Makarovna_Obraztsova-Sluchevskaya">イリニシュナ・マカロフナ・オブラズツォファ</h4>
           </div>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
@@ -779,7 +779,7 @@
         <!-- サンダ・カイン・テインギ・テ（Sanda Khaing Theingi Htet） -->
         <div class="section">
           <div class="heading">
-            <h4 id="SandaKhaingTheingiHtet">サンダ・カイン・テインギ・テ</h4>
+            <h4 id="Sanda_Khaing_Theingi_Htet">サンダ・カイン・テインギ・テ</h4>
           </div>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
@@ -822,7 +822,7 @@
         <!-- スカーレット・ウィリアムズ（Scarlett Williams） -->
         <div class="section">
           <div class="heading">
-            <h4 id="ScarlettWilliams">スカーレット・ウィリアムズ</h4>
+            <h4 id="Scarlett_Williams">スカーレット・ウィリアムズ</h4>
           </div>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
