--- a/html/gallery/nizi/Cuowu.html
+++ b/html/gallery/nizi/Cuowu.html
@@ -36,7 +36,7 @@
     <article>
       <section class="section">
         <!-- 造化神録に戻る（Return to the Record） -->
-        <a href="../../nizi.html#Cuowu">←　造化神録に戻る</a>
+        <a href="../../nizi.html#Cuòwù">←　造化神録に戻る</a>
         <!-- 現在レファレンス（Current Ref Sheet） -->
         <div class="gallery">
           <h2 style="text-align: left;">レファレンス</h2><hr>
