--- a/html/gallery/spalmea/MelissaHellborg.html
+++ b/html/gallery/spalmea/MelissaHellborg.html
@@ -36,7 +36,7 @@
     <article>
       <section class="section">
         <!-- 造化神録に戻る（Return to the Record） -->
-        <a href="../../spalmea.html#MelissaHellborg">←　造化神録に戻る</a>
+        <a href="../../spalmea.html#Melissa_Hellborg">←　造化神録に戻る</a>
         <!-- 現在レファレンス（Current Ref Sheet） -->
         <div class="gallery">
           <h2 style="text-align: left;">レファレンス</h2><hr>
