Added comment on line 43

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -40,6 +40,7 @@
           <h1>スポルメーア民主共和国</h1><hr>
         </div>
         <div class="section">
+          <!-- スコッゲド村（Skoggärd Village） -->
           <div class="heading">
             <h2 id="Skoggärd_Village">スコッゲド村</h2>
           </div>
