Added art gallery for Ingegärd Skarsgård

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -923,6 +923,9 @@
                   年齢：
                 </p>
                 <p>家族：</p>
+                <br>
+                <a href="./gallery/spalmea/IngegardSkarsgard.html" target="topframe">美術館へ行きますか？</a>
+                <br>
               </div>
             </div>
             <!-- ロセマリエ・ソダーボリ（Rosemarie Söderborg） -->
