Added art gallery for Rosemarie Söderborg

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -969,6 +969,9 @@
                   年齢：
                 </p>
                 <p>家族：</p>
+                <br>
+                <a href="./gallery/spalmea/RosemarieSoderborg.html" target="topframe">美術館へ行きますか？</a>
+                <br>
               </div>
             </div>
             <!-- リンネェア・ソレンストラム（Linnéa Sörenstram） -->
