--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1015,6 +1015,9 @@
                   年齢：
                 </p>
                 <p>家族：</p>
+                <br>
+                <a href="./gallery/spalmea/LinneaSorenstram.html" target="topframe">美術館へ行きますか？</a>
+                <br>
               </div>
             </div>
             <!-- レベッカ・スンドボリ（Rebecka Sundborg） -->
