Added art gallery for Rebecka Sundborg

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1061,6 +1061,9 @@
                   年齢：
                 </p>
                 <p>家族：</p>
+                <br>
+                <a href="./gallery/spalmea/RebeckaSundborg.html" target="topframe">美術館へ行きますか？</a>
+                <br>
               </div>
             </div>
             <!-- イヴォン・スヴァールド（Yvonne Svärd） -->
