Added art gallery for Yvonne Svärd

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1107,6 +1107,9 @@
                   年齢：
                 </p>
                 <p>家族：</p>
+                <br>
+                <a href="./gallery/spalmea/YvonneSvard.html" target="topframe">美術館へ行きますか？</a>
+                <br>
               </div>
             </div>
             <!-- ヘレン・ウィクストロム（Helen Vikström） -->
