Added art gallery for Helen Vikström

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1153,6 +1153,9 @@
                   年齢：
                 </p>
                 <p>家族：</p>
+                <br>
+                <a href="./gallery/spalmea/HelenVikstrom.html" target="topframe">美術館へ行きますか？</a>
+                <br>
               </div>
             </div>
             <!-- イェスカ・ウィクストロム（Jesca Vikström） -->
