Added art gallery for Jesca Vikström

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1199,6 +1199,9 @@
                   年齢：
                 </p>
                 <p>家族：</p>
+                <br>
+                <a href="./gallery/spalmea/JescaVikstrom.html" target="topframe">美術館へ行きますか？</a>
+                <br>
               </div>
             </div>
             <!-- ヴィヴィアン・ヴァールベルク（Vivianne Wahlberg） -->
