Changed ref sheet pointers

--- a/html/gallery/spalmea/ArendtCederstrom.html
+++ b/html/gallery/spalmea/ArendtCederstrom.html
@@ -42,7 +42,7 @@
           <h2 style="text-align: left;">レファレンス</h2><hr>
           <div class="flex-gallery">
             <div class="art-ref">
-              <img class="border" src="../../../img/ref/ArendtRefCurrent.png" alt="アレントのレファレンス" style="width: *; height: 256px;">
+              <img class="border" src="../../../img/ref/ArendtCederström.png" alt="アレントのレファレンス" style="width: *; height: 256px;">
             </div>
           </div>
         </div>
