--- a/html/gallery/nizi/Bolormaa.html
+++ b/html/gallery/nizi/Bolormaa.html
@@ -42,7 +42,7 @@
           <h2 style="text-align: left;">レファレンス</h2><hr>
           <div class="flex-gallery">
             <div class="art-ref">
-              <img class="border" src="../../../img/ref/BolormaaRefCurrent.png" alt="ボルルマーのレファレンス" style="width: *; height: 256px;">
+              <img class="border" src="../../../img/ref/Bolormaa.png" alt="ボルルマーのレファレンス" style="width: *; height: 256px;">
             </div>
           </div>
         </div>
