--- a/html/gallery/nizi/HapPEmoShun.html
+++ b/html/gallery/nizi/HapPEmoShun.html
@@ -42,7 +42,7 @@
           <h2 style="text-align: left;">レファレンス</h2><hr>
           <div class="flex-gallery">
             <div class="art-ref">
-              <img class="border" src="../../../img/ref/HapRefCurrent.png" alt="ハップのレファレンス" style="width: *; height: 256px;">
+              <img class="border" src="../../../img/ref/HapPEmoShun.png" alt="ハップのレファレンス" style="width: *; height: 256px;">
             </div>
           </div>
         </div>
