--- a/html/gallery/nizi/Wamo.html
+++ b/html/gallery/nizi/Wamo.html
@@ -42,7 +42,7 @@
           <h2 style="text-align: left;">レファレンス</h2><hr>
           <div class="flex-gallery">
             <div class="art-ref">
-              <img class="border" src="../../../img/ref/WamoRefCurrent.png" alt="ワーモのレファレンス" style="width: *; height: 256px;">
+              <img class="border" src="../../../img/ref/Wamo.png" alt="ワーモのレファレンス" style="width: *; height: 256px;">
             </div>
           </div>
         </div>
