--- a/html/gallery/spalmea/AimeeLiljestrom.html
+++ b/html/gallery/spalmea/AimeeLiljestrom.html
@@ -42,7 +42,7 @@
           <h2 style="text-align: left;">レファレンス</h2><hr>
           <div class="flex-gallery">
             <div class="art-ref">
-              <img class="border" src="../../../img/ref/AimeeRefCurrent.png" alt="アイメェのレファレンス" style="width: *; height: 256px;">
+              <img class="border" src="../../../img/ref/AiméeLiljeström.png" alt="アイメェのレファレンス" style="width: *; height: 256px;">
             </div>
           </div>
         </div>
