Added art gallery for Olivia Axelsson

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1299,6 +1299,9 @@
                   年齢：
                 </p>
                 <p>家族：</p>
+                <br>
+                <a href="./gallery/spalmea/OliviaAxelsson.html" target="topframe">美術館へ行きますか？</a>
+                <br>
               </div>
             </div>
           </div>
