--- a/html/top.html
+++ b/html/top.html
@@ -19,38 +19,35 @@
     　〓〓〓〓　　〓　　　〓
     　　　　　　　　〓〓〓〓〓〓〓〓
     -->
+    <!-- Metadata -->
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Satoki Nijikawa">
     <!-- The title of the page shown in the browser tab. -->
     <title>造化神録　概要</title>
-    <!-- The CSS stylesheet. -->
+    <!-- The CSS stylesheet(s) -->
     <link rel="stylesheet" href="../css/default.css">
   </head>
   <body>
     <header>
-      <div class="heading">
-        <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 class="header-text">造化神録</h2>
-        <h3 class="header-text">概要</h3>
-      </div>
+      <h1 class="header-text">
+        天園神關里　～ Brilliance of Heaven Pleasure<br>
+        造化神録<br>
+        概要
+      </h1>
     </header>
-    <article>
-      <div class="section">
-        <div>
-          <img src="../img/art/天園神關里.png" alt="天園神關里　～ Brilliance of Heaven Pleasure" title="天園神關里　～ Brilliance of Heaven Pleasure" style="width: 50%; height: *; display: block; margin-left: auto; margin-right: auto;"></img>
-        </div>
-        <div class="body">
-          <h3>この<ruby>造<rt>ぞう</rt>化<rt>か</rt>神<rt>がみ</rt>録<rt>ろく</rt></ruby>について</h3>
-          <p>こんばんは。<ruby>虹<rt>にじ</rt>川<rt>かわ</rt>郷<rt>さと</rt>鬼<rt>き</rt></ruby>です。</p>
-          <p>この造化神録は、多い物を説明しています。そしてあたしのプロジェクト『<ruby>天<rt>てん</rt>園<rt>えん</rt>神<rt>かん</rt>關<rt>せき</rt>里<rt>り</rt></ruby>』の為に。</p>
-          <br>
-          <p>←　多い章である。願いの章に行く、プチッと！</p>
-          <br>
-          <p>よっしゃ、またねー！　m(__)m</p>
-        </div>
+    <main>
+      <img class="title-art" src="../img/art/天園神關里.png" alt="天園神關里　～ Brilliance of Heaven Pleasure" title="天園神關里　～ Brilliance of Heaven Pleasure">
+      <article>
+        <h3>この<ruby>造<rt>ぞう</rt>化<rt>か</rt>神<rt>がみ</rt>録<rt>ろく</rt></ruby>について</h3>
+        <p>こんばんは。<ruby>虹<rt>にじ</rt>川<rt>かわ</rt>郷<rt>さと</rt>鬼<rt>き</rt></ruby>です。</p>
+        <p>この造化神録は、多い物を説明しています。そしてあたしのプロジェクト『<ruby>天<rt>てん</rt>園<rt>えん</rt>神<rt>かん</rt>關<rt>せき</rt>里<rt>り</rt></ruby>』の為に。</p>
         <br>
+        <p>←　多い章である。願いの章に行く、プチッと！</p>
         <br>
-      </div>
-    </article>
+        <p>よっしゃ、またねー！　m(__)m</p>
+      </article>
+    </main>
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
