--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <link rel="stylesheet" href="./css/default.css">
   </head>
   <frameset cols="*,80%" frameborder="0">
-    <frame src="./html/menu.html" name="menuframe" noresize>
-    <frame src="./html/top.html" name="topframe" noresize>
+    <frame src="./html/menu.html" title="目次" name="menuframe" noresize>
+    <frame src="./html/top.html" title="概要など" name="topframe" noresize>
   </frameset>
   <noframe>
     <a href="./html/top.html">フレーム未対応</a>
