--- a/html/gallery/nizi/SatokiNijikawa.html
+++ b/html/gallery/nizi/SatokiNijikawa.html
@@ -19,7 +19,10 @@
       　〓〓〓〓　　〓　　　〓
       　　　　　　　　〓〓〓〓〓〓〓〓
     -->
+    <!-- Metadata -->
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Satoki Nijikawa">
     <!-- The title of the page shown in the browser tab. -->
     <title>美術館　虹川郷鬼</title>
     <!-- The CSS stylesheet. -->
@@ -27,69 +30,67 @@
   </head>
   <body>
     <header>
-      <div class="heading">
-        <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 class="header-text">美術館</h2>
-        <h3 class="header-text">虹川郷鬼</h3>
-      </div>
+      <h1 class="header-text">
+        天園神關里　～ Brilliance of Heaven Pleasure<br>
+        美術館<br>
+        虹川郷鬼
+      </h1>
     </header>
-    <article>
-      <section class="section">
-        <!-- 造化神録に戻る（Return to the Record） -->
-        <a href="../../nizi.html#Satoki_Nijikawa">←　造化神録に戻る</a>
-        <!-- 現在レファレンス（Current Ref Sheet） -->
-        <div class="gallery">
-          <h2 style="text-align: left;">レファレンス</h2><hr>
-          <div class="flex-gallery">
-            <div class="art-ref">
-              <img class="border" src="../../../img/ref/SatokiNijikawa.png" alt="郷鬼のレファレンス" style="width: *; height: 256px;">
-            </div>
-          </div>
-        </div>
-        <!-- 美術品（All Art） -->
-        <div class="gallery">
-          <h2 style="text-align: left;">美術品</h2><hr>
-          <div class="flex-gallery">
-            <div class="art-gallery">
-              <img class="border" src="../../../img/gallery/SatokiNijikawa/虹川郷鬼（PC-98版）.png" alt="虹川郷鬼（PC-98版）" style="width: 256px; height: 256px;">
-              <p class="caption">虹川郷鬼（PC-98版）</p>
-            </div>
-            <div class="art-gallery">
-              <img class="border" src="../../../img/gallery/SatokiNijikawa/郷鬼（スライムの姿）.png" alt="郷鬼（スライムの姿）" style="width: 256px; height: 256px;">
-              <p class="caption">郷鬼（スライムの姿）</p>
-            </div>
-            <div class="art-gallery">
-              <img class="border" src="../../../img/gallery/SatokiNijikawa/ポグ.gif" alt="ポグ" style="width: 256px; height: 256px;">
-              <p class="caption">ポグ</p>
-            </div>
-            <div class="art-gallery">
-              <img class="border" src="../../../img/gallery/SatokiNijikawa/Satoki Sprite.png" alt="郷鬼のスプライト" style="width: 256px; height: 256px;">
-              <p class="caption">郷鬼のスプライト</p>
-            </div>
-            <div class="art-gallery">
-              <img class="border" src="../../../img/gallery/SatokiNijikawa/Satoki Sprite - Bra & Diaper.png" alt="郷鬼のスプライト・ブラジャーとオムツ" style="width: 256px; height: 256px;">
-              <p class="caption">郷鬼のスプライト・ブラジャーとオムツ</p>
-            </div>
-          </div>
-          <div class="flex-gallery">
-            <div class="art-gallery">
-              <img class="border" src="../../../img/gallery/SatokiNijikawa/hold your pride flag!.png" alt="トランスゲンダーの旗を持つ郷鬼" style="width: 256px; height: 256px;">
-              <p class="caption">トランスゲンダーの旗を持つ郷鬼</p>
-            </div>
-            <div class="art-gallery">
-              <img class="border" src="../../../img/gallery/SatokiNijikawa/Throne.png" alt="王座に座る郷鬼" style="width: 256px; height: 256px;">
-              <p class="caption">王座に座る郷鬼</p>
-            </div>
-          </div>
-        </div>
-        <!-- 旧レファレンス（Old ref sheets :3） -->
-        <div class="gallery">
-          <h2 style="text-align: left">旧レファレンス</h2><hr>
-          <div class="flex-gallery">
+    <main>
+      <!-- 造化神録に戻る（Return to the Record） -->
+      <a href="../../nizi.html#Satoki_Nijikawa" title="造化神録に戻る">←　造化神録に戻る</a>
+      <!-- 現在レファレンス（Current Ref Sheet） -->
+      <section class="gallery" title="現在レファレンス">
+        <h2 class="art-heading">レファレンス</h2><hr>
+        <div class="flex-gallery" title="Flexbox 【レファレンス】">
+          <div class="art-ref" title="郷鬼のレファレンス">
+            <img class="reference-art" src="../../../img/ref/SatokiNijikawa.png" alt="郷鬼のレファレンス">
           </div>
         </div>
       </section>
-    </article>
+      <!-- 美術品（All Art） -->
+      <section class="gallery" title="美術品">
+        <h2 class="art-heading">美術品</h2><hr>
+        <div class="flex-gallery" title="Flexbox 【美術品】・Ａ">
+          <div class="art-gallery" title="虹川郷鬼（PC-98版）">
+            <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/虹川郷鬼（PC-98版）.png" alt="虹川郷鬼（PC-98版）">
+            <p class="caption">虹川郷鬼（PC-98版）</p>
+          </div>
+          <div class="art-gallery" title="郷鬼（スライムの姿）">
+            <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/郷鬼（スライムの姿）.png" alt="郷鬼（スライムの姿）">
+            <p class="caption">郷鬼（スライムの姿）</p>
+          </div>
+          <div class="art-gallery" title="ポグ">
+            <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/ポグ.gif" alt="ポグ">
+            <p class="caption">ポグ</p>
+          </div>
+          <div class="art-gallery" title="郷鬼のスプライト">
+            <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/Satoki Sprite.png" alt="郷鬼のスプライト">
+            <p class="caption">郷鬼のスプライト</p>
+          </div>
+          <div class="art-gallery" title="郷鬼のスプライト・ブラジャーとオムツ">
+            <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/Satoki Sprite - Bra & Diaper.png" alt="郷鬼のスプライト・ブラジャーとオムツ">
+            <p class="caption">郷鬼のスプライト・ブラジャーとオムツ</p>
+          </div>
+        </div>
+        <div class="flex-gallery" title="Flexbox 【美術品】・Ｂ">
+          <div class="art-gallery" title="トランスゲンダーの旗を持つ郷鬼">
+            <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/hold your pride flag!.png" alt="トランスゲンダーの旗を持つ郷鬼">
+            <p class="caption">トランスゲンダーの旗を持つ郷鬼</p>
+          </div>
+          <div class="art-gallery" title="王座に座る郷鬼">
+            <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/Throne.png" alt="王座に座る郷鬼">
+            <p class="caption">王座に座る郷鬼</p>
+          </div>
+        </div>
+      </section>
+      <!-- 旧レファレンス（Old ref sheets :3） -->
+      <section class="gallery" title="旧レファレンス">
+        <h2 class="art-heading">旧レファレンス</h2><hr>
+        <div class="flex-gallery" title="Flexbox 【旧レファレンス】">
+        </div>
+      </section>
+    </main>
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
