Code Cleanup III: Revenge of the Ugh [Part I]

--- a/html/xasmad.html
+++ b/html/xasmad.html
@@ -2,24 +2,27 @@
 <html lang="ja-JP">
   <head>
     <!--
-    　　　　〓
-    　　　　〓　　　〓〓〓〓〓〓〓
-    　　　　〓　　　　　　〓
-    　〓〓〓〓〓〓〓　　　〓
-    　〓　　〓　　〓　　　〓
-    　〓　　〓　　〓　　　〓
-    　〓　　〓　　〓　　　〓
-    　〓　　〓　　〓　　　〓
-    　〓〓〓〓〓〓〓　　　〓
-    　　　　〓　　　　　　〓
-    　　　　〓　　　　　　〓
-    　　　　〓　〓　　　　〓
-    　　　　〓　〓　　　　〓
-    　　　　〓〓〓〓　　　〓
-    　〓〓〓〓　　〓　　　〓
-    　　　　　　　　〓〓〓〓〓〓〓〓
+      　　　　〓
+      　　　　〓　　　〓〓〓〓〓〓〓
+      　　　　〓　　　　　　〓
+      　〓〓〓〓〓〓〓　　　〓
+      　〓　　〓　　〓　　　〓
+      　〓　　〓　　〓　　　〓
+      　〓　　〓　　〓　　　〓
+      　〓　　〓　　〓　　　〓
+      　〓〓〓〓〓〓〓　　　〓
+      　　　　〓　　　　　　〓
+      　　　　〓　　　　　　〓
+      　　　　〓　〓　　　　〓
+      　　　　〓　〓　　　　〓
+      　　　　〓〓〓〓　　　〓
+      　〓〓〓〓　　〓　　　〓
+      　　　　　　　　〓〓〓〓〓〓〓〓
     -->
+    <!-- Metadata -->
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Satoki Nijikawa">
     <!-- The title of the page shown in the browser tab. -->
     <title>造化神録　ザスマッド州</title>
     <!-- The CSS stylesheet. -->
