--- a/html/armor.html
+++ b/html/armor.html
@@ -19,7 +19,10 @@
       　〓〓〓〓　　〓　　　〓
       　　　　　　　　〓〓〓〓〓〓〓〓
 	-->
+    <!-- Metadata -->
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Satoki Nijikawa">
     <!-- The title of the page shown in the browser tab. -->
     <title>造化神録　装甲</title>
     <!-- The CSS stylesheet. -->
@@ -27,15 +30,15 @@
   </head>
   <body>
     <header>
-      <div class="heading">
-        <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 class="header-text">造化神録</h2>
-        <h3 class="header-text">装甲</h3>
-      </div>
+      <h1 class="header-text">
+        天園神關里　～ Brilliance of Heaven Pleasure<br>
+        造化神録<br>
+        装甲
+      </h1>
     </header>
-    <article>
+    <main>
       <p class="coming-soon">乞うご期待！！</p>
-    </article>
+    </main>
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
