--- a/html/bunoden.html
+++ b/html/bunoden.html
@@ -2,24 +2,27 @@
 <html lang="ja-JP">
   <head>
     <!--
-    　　　　〓
-    　　　　〓　　　〓〓〓〓〓〓〓
-    　　　　〓　　　　　　〓
-    　〓〓〓〓〓〓〓　　　〓
-    　〓　　〓　　〓　　　〓
-    　〓　　〓　　〓　　　〓
-    　〓　　〓　　〓　　　〓
-    　〓　　〓　　〓　　　〓
-    　〓〓〓〓〓〓〓　　　〓
-    　　　　〓　　　　　　〓
-    　　　　〓　　　　　　〓
-    　　　　〓　〓　　　　〓
-    　　　　〓　〓　　　　〓
-    　　　　〓〓〓〓　　　〓
-    　〓〓〓〓　　〓　　　〓
-    　　　　　　　　〓〓〓〓〓〓〓〓
+      　　　　〓
+      　　　　〓　　　〓〓〓〓〓〓〓
+      　　　　〓　　　　　　〓
+      　〓〓〓〓〓〓〓　　　〓
+      　〓　　〓　　〓　　　〓
+      　〓　　〓　　〓　　　〓
+      　〓　　〓　　〓　　　〓
+      　〓　　〓　　〓　　　〓
+      　〓〓〓〓〓〓〓　　　〓
+      　　　　〓　　　　　　〓
+      　　　　〓　　　　　　〓
+      　　　　〓　〓　　　　〓
+      　　　　〓　〓　　　　〓
+      　　　　〓〓〓〓　　　〓
+      　〓〓〓〓　　〓　　　〓
+      　　　　　　　　〓〓〓〓〓〓〓〓
     -->
+    <!-- Metadata -->
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Satoki Nijikawa">
     <!-- The title of the page shown in the browser tab. -->
     <title>造化神録　侮之殿</title>
     <!-- The CSS stylesheet. -->
@@ -27,137 +30,117 @@
   </head>
   <body>
     <header>
-      <div class="heading">
-        <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 class="header-text">造化神録</h2>
-        <h3 class="header-text">侮之殿</h3>
-      </div>
+      <h1 class="header-text">
+        天園神關里　～ Brilliance of Heaven Pleasure<br>
+        造化神録<br>
+        侮之殿
+      </h1>
     </header>
-    <article>
-      <div class="section">
-        <div class="heading">
-          <h1>侮之殿</h1><hr>
-        </div>
-        <div class="section">
-          <!-- アルクスニス・アリギルトス（Aļģirts Alksnis） -->
-          <div class="section">
-            <div class="heading">
-              <h4>アルクスニス・アリギルトス</h4>
-            </div>
-            <div class="body">
-              <p>智識の瞳</p>
-              <p>
-                アルクスニス・アリギルトス<br>
-                <span lang="lv">Alksnis Aļģirts</span>
-              </p>
-              <p>
-                種族：さとり<br>
-                能力：他人の智識を見る程度の能力
-              </p>
-              <p>
-                性別：<br>
-                性自認：<br>
-                代名詞：<br>
-                雌雄性：
-              </p>
-              <p>
-                誕生日：<br>
-                年齢：
-              </p>
-              <p>家族：</p>
-              <p>クリメンティーナの夫であり、リーリヤとキェルスタの父親である。</p>
-            </div>
-          </div>
-          <!-- アルクスネ・キェルスタ（Ķersta Alksne） -->
-          <div class="section">
-            <div class="heading">
-              <h4>アルクスネ・キェルスタ</h4>
-            </div>
-            <div class="body">
-              <p>後悔の瞳</p>
-              <p>
-                アルクスネ・キェルスタ<br>
-                <span lang="lv">Alksne Ķersta</span>
-              </p>
-              <p>
-                種族：さとり<br>
-                能力：他人の後悔を見る程度の能力
-              </p>
-              <p>
-                性別：<br>
-                性自認：<br>
-                代名詞：<br>
-                雌雄性：
-              </p>
-              <p>
-                誕生日：<br>
-                年齢：
-              </p>
-              <p>家族：</p>
-              <p>クリメンティーナとアリギルトスの娘であり、リーリヤの妹である。</p>
-            </div>
-          </div>
-          <!-- アルクスネ・クリメンティーナ（Klimentīna Alksne） -->
-          <div class="section">
-            <div class="heading">
-              <h4>アルクスネ・クリメンティーナ</h4>
-            </div>
-            <div class="body">
-              <p>性欲の瞳</p>
-              <p>
-                アルクスネ・クリメンティーナ<br>
-                <span lang="lv">Alksne Klimentīna</span>
-              </p>
-              <p>
-                種族：さとり<br>
-                能力：他人の性欲を見る程度の能力
-              </p>
-              <p>
-                性別：<br>
-                性自認：<br>
-                代名詞：<br>
-                雌雄性：
-              </p>
-              <p>
-                誕生日：<br>
-                年齢：
-              </p>
-              <p>家族：</p>
-              <p>アリギルトスの妻であり、リーリヤとキェルスタの母親である。</p>
-            </div>
-          </div>
-          <!-- アルクスネ・リーリヤ（Līrija Alksne） -->
-          <div class="section">
-            <div class="heading">
-              <h4>アルクスネ・リーリヤ</h4>
-            </div>
-            <div class="body">
-              <p>感情の瞳</p>
-              <p>
-                アルクスネ・リーリヤ<br>
-                <span lang="lv">Alksne Līrija</span>
-              </p>
-              <p>
-                種族：さとり<br>
-                能力：他人の感情を見る程度の能力
-              </p>
-              <p>
-                性別：<br>
-                性自認：<br>
-                代名詞：<br>
-                雌雄性：
-              </p>
-              <p>
-                誕生日：<br>
-                年齢：
-              </p>
-              <p>家族：</p>
-              <p>クリメンティーナとアリギルトスの娘であり、キェルスタの姉である。</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </article>
+    <main>
+      <article>
+        <h1 id="bunoden">侮之殿</h1><hr>
+        <!-- アルクスニス・アリギルトス（Aļģirts Alksnis） -->
+        <section>
+          <h4 id="Aļģirts_Alksnis">アルクスニス・アリギルトス</h4>
+          <p>智識の瞳</p>
+          <p>
+            アルクスニス・アリギルトス<br>
+            <span lang="lv" class="font-latin">Alksnis Aļģirts</span>
+          </p>
+          <p>
+            種族：さとり<br>
+            能力：他人の智識を見る程度の能力
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+          <p>クリメンティーナの夫であり、リーリヤとキェルスタの父親である。</p>
+        </section>
+        <!-- アルクスネ・キェルスタ（Ķersta Alksne） -->
+        <section>
+          <h4 id="Ķersta_Alksne">アルクスネ・キェルスタ</h4>
+          <p>後悔の瞳</p>
+          <p>
+            アルクスネ・キェルスタ<br>
+            <span lang="lv" class="font-latin">Alksne Ķersta</span>
+          </p>
+          <p>
+            種族：さとり<br>
+            能力：他人の後悔を見る程度の能力
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+          <p>クリメンティーナとアリギルトスの娘であり、リーリヤの妹である。</p>
+        </section>
+        <!-- アルクスネ・クリメンティーナ（Klimentīna Alksne） -->
+        <section>
+          <h4 id="Klimentīna_Alksne">アルクスネ・クリメンティーナ</h4>
+          <p>性欲の瞳</p>
+          <p>
+            アルクスネ・クリメンティーナ<br>
+            <span lang="lv" class="font-latin">Alksne Klimentīna</span>
+          </p>
+          <p>
+            種族：さとり<br>
+            能力：他人の性欲を見る程度の能力
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+          <p>アリギルトスの妻であり、リーリヤとキェルスタの母親である。</p>
+        </section>
+        <!-- アルクスネ・リーリヤ（Līrija Alksne） -->
+        <section>
+          <h4 id="Līrija_Alksne">アルクスネ・リーリヤ</h4>
+          <p>感情の瞳</p>
+          <p>
+            アルクスネ・リーリヤ<br>
+            <span lang="lv" class="font-latin">Alksne Līrija</span>
+          </p>
+          <p>
+            種族：さとり<br>
+            能力：他人の感情を見る程度の能力
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+          <p>クリメンティーナとアリギルトスの娘であり、キェルスタの姉である。</p>
+        </section>
+      </article>
+    </main>
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
