--- a/html/credit.html
+++ b/html/credit.html
@@ -2,24 +2,27 @@
 <html lang="ja-JP">
   <head>
     <!--
-    　　　　〓
-    　　　　〓　　　〓〓〓〓〓〓〓
-    　　　　〓　　　　　　〓
-    　〓〓〓〓〓〓〓　　　〓
-    　〓　　〓　　〓　　　〓
-    　〓　　〓　　〓　　　〓
-    　〓　　〓　　〓　　　〓
-    　〓　　〓　　〓　　　〓
-    　〓〓〓〓〓〓〓　　　〓
-    　　　　〓　　　　　　〓
-    　　　　〓　　　　　　〓
-    　　　　〓　〓　　　　〓
-    　　　　〓　〓　　　　〓
-    　　　　〓〓〓〓　　　〓
-    　〓〓〓〓　　〓　　　〓
-    　　　　　　　　〓〓〓〓〓〓〓〓
+      　　　　〓
+      　　　　〓　　　〓〓〓〓〓〓〓
+      　　　　〓　　　　　　〓
+      　〓〓〓〓〓〓〓　　　〓
+      　〓　　〓　　〓　　　〓
+      　〓　　〓　　〓　　　〓
+      　〓　　〓　　〓　　　〓
+      　〓　　〓　　〓　　　〓
+      　〓〓〓〓〓〓〓　　　〓
+      　　　　〓　　　　　　〓
+      　　　　〓　　　　　　〓
+      　　　　〓　〓　　　　〓
+      　　　　〓　〓　　　　〓
+      　　　　〓〓〓〓　　　〓
+      　〓〓〓〓　　〓　　　〓
+      　　　　　　　　〓〓〓〓〓〓〓〓
     -->
+    <!-- Metadata -->
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Satoki Nijikawa">
     <!-- The title of the page shown in the browser tab. -->
     <title>造化神録　スタッフ</title>
     <!-- The CSS stylesheet. -->
@@ -27,24 +30,19 @@
   </head>
   <body>
     <header>
-      <div class="heading">
-        <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 class="header-text">造化神録</h2>
-        <h3 class="header-text">スタッフクレジッツ</h3>
-      </div>
+      <h1 class="header-text">
+        天園神關里　～ Brilliance of Heaven Pleasure<br>
+        造化神録<br>
+        スタッフクレジッツ
+      </h1>
     </header>
-    <article>
-      <div style="text-align: center;">
-        <div class="section">
-          <div class="heading">
-            <h5>原作</h5>
-          </div>
-          <div class="body">
-            <p>虹川 郷鬼</p>
-          </div>
-        </div>
-      </div>
-    </article>
+    <main class="credits">
+      <!-- 原作｜Original Story -->
+      <section>
+        <h4>原作</h4>
+        <p>虹川 郷鬼</p>
+      </section>
+    </main>
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
