--- a/html/species.html
+++ b/html/species.html
@@ -19,7 +19,10 @@
       　〓〓〓〓　　〓　　　〓
       　　　　　　　　〓〓〓〓〓〓〓〓
     -->
+    <!-- Metadata -->
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Satoki Nijikawa">
     <!-- The title of the page shown in the browser tab. -->
     <title>造化神録　種族</title>
     <!-- The CSS stylesheet. -->
