Code Cleanup III: Revenge of the Ugh [Part II]

--- a/html/hikigahara.html
+++ b/html/hikigahara.html
@@ -30,48 +30,40 @@
   </head>
   <body>
     <header>
-      <div class="heading">
-        <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 class="header-text">造化神録</h2>
-        <h3 class="header-text">日木ヶ原の森</h3>
-      </div>
+      <h1 class="header-text">
+        天園神關里　～ Brilliance of Heaven Pleasure<br>
+        造化神録<br>
+        日木ヶ原の森
+      </h1>
     </header>
-    <article>
-      <div class="section">
-        <div class="heading">
-          <h1>日木ヶ原の森</h1><hr>
-        </div>
-        <!-- 朴茶々丸（Chachamaru Paku） -->
-        <div class="section">
-          <div class="heading">
-            <h4>朴茶々丸</h4>
-          </div>
-          <div class="body">
-            <p>希望を破る森のジーディヤオ</p>
-            <p>
-              朴　茶々丸（ぱく　ちゃちゃまる）<br>
-              Paku Chachamaru
-            </p>
-            <p>
-              種族：ドラゴンの女神<br>
-              能力：
-            </p>
-            <p>
-              性別：<br>
-              性自認：<br>
-              代名詞：<br>
-              雌雄性：
-            </p>
-            <p>
-              誕生日：<br>
-              年齢：
-            </p>
-            <p>家族：</p>
-            <p>※代名詞は「<ruby>我<rt>われ</rt></ruby>」である。</p>
-          </div>
-        </div>
-      </div>
-    </article>
+    <main>
+      <h1>日木ヶ原の森</h1><hr>
+      <!-- 朴茶々丸（Chachamaru Paku） -->
+      <section>
+        <h4>朴茶々丸</h4>
+        <p>希望を破る森のジーディヤオ</p>
+        <p>
+          朴　茶々丸（ぱく　ちゃちゃまる）<br>
+          Paku Chachamaru
+        </p>
+        <p>
+          種族：ドラゴンの女神<br>
+          能力：
+        </p>
+        <p>
+          性別：<br>
+          性自認：<br>
+          代名詞：<br>
+          雌雄性：
+        </p>
+        <p>
+          誕生日：<br>
+          年齢：
+        </p>
+        <p>家族：</p>
+        <p>※代名詞は「<ruby>我<rt>われ</rt></ruby>」である。</p>
+      </section>
+    </main>
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
