--- a/html/nizi.html
+++ b/html/nizi.html
@@ -108,6 +108,10 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/they</p>
+            <a href="https://lgbtqia.fandom.com/wiki/Intersex" title="インターセックス" target="_blank">
+              <img class="pride-flag" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）">
+            </a>
+            <br>
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" title="ノンバイナリー" target="_blank">
               <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）">
             </a>
@@ -133,7 +137,7 @@
               能力：人を獣人に変わる程度の能力
             </p>
             <p>
-              性別：○○<br>
+              性別：インターセックス<br>
               性自認：ノンバイナリー<br>
               代名詞：彼女／奴（she/they）<br>
               雌雄性：エイスフラックス
@@ -164,6 +168,10 @@
             <p class="pronouns">代名詞：she/they</p>
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" title="ノンバイナリー" target="_blank">
               <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）">
+            </a>
+            <br>
+            <a href="https://lgbtqia.fandom.com/wiki/Asexual" title="アセクシャル" target="_blank">
+              <img class="pride-flag" src="../img/pride/Asexual.png" alt="アセクシャル（Asexual）" title="アセクシャル（Asexual）">
             </a>
             <br>
           </div>
