--- a/html/hutagozima.html
+++ b/html/hutagozima.html
@@ -30,133 +30,84 @@
   </head>
   <body>
     <header>
-      <div class="heading">
-        <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 class="header-text">造化神録</h2>
-        <h3 class="header-text">二子島連合共和国</h3>
-      </div>
+      <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure<br>
+        造化神録<br>
+        二子島連合共和国</h1>
     </header>
-    <article>
-      <div class="section">
-        <div class="heading">
-          <h1>二子島連合共和国</h1><hr>
-        </div>
-        <div class="section">
-          <div class="heading">
-            <h2>ディドフッフシ・チャギシー市</h2>
-          </div>
-          <div class="section">
-            <!--  -->
-            <div class="section">
-              <div class="heading">
-                <h4></h4>
-              </div>
-              <div class="body">
-                <p></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="section">
-          <div class="heading">
-            <h2>天の島</h2>
-          </div>
-          <div class="section">
-            <div class="heading">
-              <h3>ティンダフナドゥー市</h3>
-            </div>
-            <div class="section">
-              <!--  -->
-              <div class="section">
-                <div class="heading">
-                  <h4></h4>
-                </div>
-                <div class="body">
-                  <p></p>
-                </div>
-              </div>
-            </div>
-            <div class="heading">
-              <h3>クルドゥフヴァル市</h3>
-            </div>
-            <div class="section">
-              <!--  -->
-              <div class="section">
-                <div class="heading">
-                  <h4></h4>
-                </div>
-                <div class="body">
-                  <p></p>
-                </div>
-              </div>
-            </div>
-            <div class="heading">
-              <h3>ヴィリンミードゥー市</h3>
-            </div>
-            <div class="section">
-              <!--  -->
-              <div class="section">
-                <div class="heading">
-                  <h4></h4>
-                </div>
-                <div class="body">
-                  <p></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="section">
-          <div class="heading">
-            <h2>魔の島</h2>
-          </div>
-          <div class="section">
-            <div class="heading">
-              <h3>ラタムガラー市</h3>
-            </div>
-            <div class="section">
-              <!--  -->
-              <div class="section">
-                <div class="heading">
-                  <h4></h4>
-                </div>
-                <div class="body">
-                  <p></p>
-                </div>
-              </div>
-            </div>
-            <div class="heading">
-              <h3>パッシャブ市</h3>
-            </div>
-            <div class="section">
-              <!--  -->
-              <div class="section">
-                <div class="heading">
-                  <h4></h4>
-                </div>
-                <div class="body">
-                  <p></p>
-                </div>
-              </div>
-            </div>
-            <div class="heading">
-              <h3>カンダラタバド市</h3>
-            </div>
-            <div class="section">
-              <!--  -->
-              <div class="section">
-                <div class="heading">
-                  <h4></h4>
-                </div>
-                <div class="body">
-                  <p></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+    <main>
+      <h1 id="United_Republic_of_the_Twin_Islands">二子島連合共和国</h1><hr>
+      <!-- ディドフッフシ・チャギシー市（Dhidhhuffushi-Chaghisi City）-->
+      <article>
+        <h2 id="Dhidhhuffushi-Chaghisi_City">ディドフッフシ・チャギシー市</h2>
+        <!-- （） -->
+        <section>
+          <h4 id=""></h4>
+          <p></p>
+        </section>
+      </article>
+      <!-- 天の島（Island of Ame） -->
+      <div id="天の島">
+        <h2 id="Island_of_Ame">天の島</h2>
+        <!-- ティンダフナドゥー市（Thindafunadhoo City｜ތިންޑަފުނަދޫ｜Thindafunadhoo） -->
+        <article>
+          <h3 id="Thindafunadhoo_City">ティンダフナドゥー市</h3>
+          <!-- （） -->
+          <section>
+            <h4 id=""></h4>
+            <p></p>
+          </section>
+        </article>
+        <!-- クルドゥフヴァル市（Kulhudhufvaru City｜ކުޅުދުފްވަރު｜Kulhudhufvaru） -->
+        <article>
+          <h3 id="Kulhudhufvaru_City">クルドゥフヴァル市</h3>
+          <!-- （） -->
+          <section>
+            <h4 id=""></h4>
+            <p></p>
+          </section>
+        </article>
+        <!-- ヴィリンミードゥー市（Villinmeedhoo City｜ވިލްލިންމީދޫ｜Villinmeedhoo） -->
+        <article>
+          <h3 id="Villinmeedhoo_City">ヴィリンミードゥー市</h3>
+          <!-- （） -->
+          <section>
+            <h4 id=""></h4>
+            <p></p>
+          </section>
+        </article>
       </div>
-    </article>
+      <!-- 魔の島（Island of Ma） -->
+      <div id="魔の島">
+        <h2 id="Island_of_Ma">魔の島</h2>
+        <!-- ラタムガラー市（Latamgara City｜لتمگرا｜Latamgarā） -->
+        <article>
+          <h3 id="Latamgara_City">ラタムガラー市</h3>
+          <!-- （） -->
+          <section>
+            <h4 id=""></h4>
+            <p></p>
+          </section>
+        </article>
+        <!-- パッシャブ市（Passhab City｜پسشب｜Passhab） -->
+        <article>
+          <h3 id="Passhab_City">パッシャブ市</h3>
+          <!-- （） -->
+          <section>
+            <h4 id=""></h4>
+            <p></p>
+          </section>
+        </article>
+        <!-- カンダラタバド市（Qandalatabad City｜قندلتبد｜Qandalatabad） -->
+        <article>
+          <h3 id="Qandalatabad_City">カンダラタバド市</h3>
+          <!-- （） -->
+          <section>
+            <h4 id=""></h4>
+            <p></p>
+          </section>
+        </article>
+      </div>
+    </main>
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
