--- a/html/top.html
+++ b/html/top.html
@@ -39,7 +39,7 @@
     <main>
       <img class="title-art" src="../img/art/天園神關里.png" alt="天園神關里　～ Brilliance of Heaven Pleasure" title="天園神關里　～ Brilliance of Heaven Pleasure">
       <article>
-        <h3>この<ruby>造<rt>ぞう</rt>化<rt>か</rt>神<rt>がみ</rt>録<rt>ろく</rt></ruby>について</h3>
+        <h3>この<ruby>造<rt class="top-head-furigana">ぞう</rt>化<rt class="top-head-furigana">か</rt>神<rt class="top-head-furigana">がみ</rt>録<rt class="top-head-furigana">ろく</rt></ruby>について</h3>
         <p>こんばんは。<ruby>虹<rt>にじ</rt>川<rt>かわ</rt>郷<rt>さと</rt>鬼<rt>き</rt></ruby>です。</p>
         <p>この造化神録は、多い物を説明しています。そしてあたしのプロジェクト『<ruby>天<rt>てん</rt>園<rt>えん</rt>神<rt>かん</rt>關<rt>せき</rt>里<rt>り</rt></ruby>』の為に。</p>
         <br>
