Added pride month art for Satoki Nijikawa

--- a/html/gallery/nizi/SatokiNijikawa.html
+++ b/html/gallery/nizi/SatokiNijikawa.html
@@ -82,6 +82,14 @@
             <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/Throne.png" alt="王座に座る郷鬼">
             <p class="caption">王座に座る郷鬼</p>
           </div>
+          <div class="art-gallery" title="虹川郷鬼（PC-98・プライド版）">
+            <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/Satoki (PC-98 Pride).png" alt="虹川郷鬼（PC-98・プライド版）">
+            <p class="caption">虹川郷鬼（PC-98・プライド版）</p>
+          </div>
+          <div class="art-gallery" title="プライド・２０２４年">
+            <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/Pride 2024.png" alt="プライド・２０２４年">
+            <p class="caption">プライド・２０２４年</p>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
