Added pride month art for Wamo

--- a/html/gallery/nizi/Wamo.html
+++ b/html/gallery/nizi/Wamo.html
@@ -56,6 +56,14 @@
             <img class="gallery-art" src="../../../img/gallery/Wamo/ワーモ（PC-98版）.png" alt="ワーモ（PC-98版）">
             <p class="caption">ワーモ（PC-98版）</p>
           </div>
+          <div class="art-gallery" title="ワーモ（PC-98・プライド版）">
+            <img class="gallery-art" src="../../../img/gallery/Wamo/Wamo (PC-98 Pride).png" alt="ワーモ（PC-98・プライド版）">
+            <p class="caption">ワーモ（PC-98・プライド版）</p>
+          </div>
+          <div class="art-gallery" title="プライド・２０２４年">
+            <img class="gallery-art" src="../../../img/gallery/Wamo/Pride 2024.png" alt="プライド・２０２４年">
+            <p class="caption">プライド・２０２４年</p>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
